# resume-gap-agent

./: .env.example  .gitignore  README.md  config.py  conftest.py  demo.ipynb  factory.py  logging_conf.py  mcp_server.py  models.py  pyproject.toml  reporting.py  taxonomy.py
graph/: agents.py  aio.py  build.py  gap_diff.py  mcp_client.py  nodes.py  state.py
llm/: __init__.py  anthropic.py  base.py  mock.py  openai.py
prompts/: __init__.py  agents.py  templates.py
sources/: __init__.py  adzuna.py  base.py  mock.py
tests/: test_agentic.py  test_gap_diff.py  test_graph_mock.py  test_llm_extract.py
